# wq

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TODO  app.py  distillbertqa.py  docker-compose.yaml  entrypoint.sh  feeder.py  gunicorn.conf.py  logging.conf  oxygen.json  pyproject.toml  requirements.in  requirements.txt  test.json  utils.py  wq.db  wq.py  wsgi.py
.github/workflows/: docker-image.yml  publish.yaml
api/: chatgpt.py  wiki.py
models/: README.md
models/onnx/: model.onnx
models/onnx/tokenizer/: tokenizer_config.json
static/: chat.js  debounce.js  hyde.js  index.js
static/css/: chat.css  style.css
store/: qa.py
templates/: chat.html  footer.html  index.html
wq/: __init__.py  article.py  embedding.py  injest.py  llm.py  retriever.py  types.py  wikidata.py
wq/data/: translation.html
wq/embedding/: __init__.py  e5.py  e5_ct2.py  e5_onnx.py  sbert.py  sbertembedding.py
wq/vectorstore/: __init__.py  basestore.py  chromastore.py  redisstore.py
wq/wiki/: __init__.py  api.py  article.py
