[build-system]
requires = ["setuptools", "wheel", "hatchling"]
# build-backend = "hatchling.build"
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "wq"
classifiers = ["Private :: Do Not Upload"]
version = "0"
requires-python = ">=3.9"
dependencies = [
    "bs4",
    "ctranslate2",
    "ecs-logging",
    "fastapi",
    "httpx",
    "jinja2",
    "onnxruntime",
    "pydantic",
    "python-dotenv",
    "redis",
    "tokenizers",
    "tqdm",
    "uvicorn",
    # "sentencesegmenter @ git+https://github.com/santhoshtr/sentencesegmenter.git@2d58510ed5eb6572483dea65592d2c078703883d",
]


[project.optional-dependencies]
dev = [
    "pip-tools",
    "isort",
    "black",
    "ruff",
    "tox",
]
experimental = [
    "llama-cpp-python"
]



[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
